# cecs327

./: .gitignore  README.md
Discovery/list-server-binary/: CMakeLists.txt
Discovery/list-server-binary/src/: NameServerHandlers.cpp  main.cpp
Discovery/name-server-binary/: CMakeLists.txt
Discovery/name-server-binary/include/: SharedRegistry.h
Discovery/name-server-binary/src/: RequestHandlers.cpp  main.cpp
IPC/fifo-client/: main.cpp
IPC/pipes-two-way/: CMakeLists.txt  main.cpp
Lectures/IPC/fifo-client/: CMakeLists.txt
Lectures/IPC/fifo-server/: CMakeLists.txt  main.cpp
RPC/: test_hw4.ipynb
RPC/key-value-client-binary/: CMakeLists.txt  main.cpp
RPC/key-value-client-binary/include/: MessageReader.h  RemoteKeyValueStore.h  RemoteList.h  RemoteListStub.h  types.h
RPC/key-value-client-binary/src/: RemoteKeyValueStore.cpp  RemoteList.cpp  RemoteListStub.cpp  SocketUtils.cpp  types.cpp
RPC/key-value-server-binary/: CMakeLists.txt
RPC/key-value-server-binary/include/: MessageReader.h  RequestHandlers.h  ResponseHandlers.h  SharedStore.h
RPC/key-value-server-binary/src/: RequestHandlers.cpp  ResponseHandlers.cpp  main.cpp
Sockets/: README.md  echo_demo.ipynb  echo_demo_updated.ipynb  homeowrk3.ipynb  test_concurrent.bat  test_concurrent.ps1
Sockets/echo-client/: main.cpp
Sockets/echo-server/: main.cpp
Sockets/echo-server-homework/: CHANGES.md  CMakeLists.txt  echo_server_homework  main.cpp
Sockets/key-value-client/: main.cpp
Sockets/key-value-server/: main.cpp
echo-server/: main.cpp
